# PoB_System

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  Readme.md  vcpkg.json
.github/workflows/: cmake.yml  format.yml
LZip/: LICENSE
cmake/: ClangFormat.cmake
pob_system/: CMakeLists.txt
pob_system/include/pob_system/: image.h  lua_helper.h  state.h
pob_system/src/: image.cpp  lua_helper.cpp  main.cpp  state.cpp
src/LZip/: CMakeLists.txt  lzip.cpp
src/pob_system/: CMakeLists.txt
src/pob_system/include/concurrent/: blockingconcurrentqueue.h  concurrentqueue.h  lightweightsemaphore.h
src/pob_system/include/pob_system/: draw_layer.h  font_rendering.h  keys.h  lua_helper.h  state.h  user_path_helper.h  work_pool.h
src/pob_system/include/pob_system/commands/: command_list.h  viewport_command.h
src/pob_system/src/: font_rendering.cpp  image.cpp  keys.cpp  lua_helper.cpp  main.cpp  state.cpp  win32.cpp
src/tasks/: CMakeLists.txt
src/tasks/include/tasks/: config.h  shared_task.h  task.h
src/tasks/include/tasks/detail/: lightweight_manual_reset_event.hpp  sync_wait_task.hpp  win32.hpp
src/tasks/src/: lightweight_manual_reset_event.cpp  spin_mutex.cpp  spin_mutex.hpp  spin_wait.hpp  win32.cpp
src/tests/: CMakeLists.txt  tests.cpp
src/tracy/: CMakeLists.txt
tasks/: CMakeLists.txt
tasks/include/tasks/: config.h  shared_task.h  static_thread_pool.h  task.h
tasks/include/tasks/detail/: win32.hpp
tasks/src/: auto_reset_event.cpp  auto_reset_event.hpp  spin_wait.cpp  static_thread_pool.cpp  win32.cpp
tests/: tests.cpp
triplets/: x64-windows-custom.cmake
vcpkg/triplets/: x64-windows-custom.cmake
